2006-11-01  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Restored the OpenSSL support

2006-10-30  Philip van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Build environment simplificiations

2006-10-27  Sergio Villar Senin <svillar@igalia.com>

	* libtinymail-camel/camel-lite: Added xulrunner-nspr/nss as possible
	nspr and nss packages
	* libtinymail-camel/libtinymail-camel.pc.in: Bugfix

2006-10-27  Philip Van Hoof <pvanhoof@gnome.org>

	*  libtinymail-camel/camel-lite: NSPR & NSS detection, bugfix

2006-10-26  Philip Van Hoof <pvanhoof@gnome.org>

	*  libtinymail-camel/camel-lite: Aggressive memory reductions by
	removing unused features and fields from Camel

2006-10-25  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Applied patch #75412 of Bug #363695
	which was done by Matthew Barnes (porting the patch from evolution-
	data-server to camel-lite)
	* libtinymail-camel/camel-lite: Bugfixes (important ones)
	
2006-10-24  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: All sorts of bugfixes

2006-10-23  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Drastic reduction of memory
	consumption on initial download of both IMAP and NNTP folders.
	* libtinymail-gnome-desktop: Default status of the device is now
	offline in stead of online (for example in case network manager
	installation was invalid or not found)
	* Bugfix reported by Nitin.Mahajan@nokia.com
	* libtinymail-camel/camel-lite: Merging with Matthen Barnes's stuff

2006-10-20  Sankarshan Mukhopadhyay <sankarshan.mukhopadhyay@gmail.com>

	* docs/deve/reference/libtinymail-docs.sgml: Language corrections in
	the introduction of the API reference documentation.

2006-10-20  Philip Van Hoof <pvanhoof@gnome.org>

	* libtinymail-camel/camel-lite: Allocation of the CamelFolderInfo is
	now with GSlice in stead of many different malloc ways. This one needs
	testing!
